# BaseMVP

./: README.md  build.gradle  gradle.properties  mvp快速模板.rar  mvp快速生成模板.rar  settings.gradle
app/: build.gradle
app/schemas/com.basemvp.util.room.UserDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1fen.svga  2fen.svga  3fen.svga  4fen.svga  5fen.svga
app/src/main/res/drawable-v24/: base_dialog_shape.xml
app/src/main/res/layout/: activity_circle_rc.xml  activity_connection_rc.xml  activity_control_fragment.xml  activity_coordinator.xml  activity_coordinator1.xml  activity_coordinator2.xml  activity_damping_rc.xml  activity_fragment_example.xml  activity_gallery.xml  activity_item_animation1.xml  activity_main.xml  (+33 more)
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/alone/: AndroidManifest.xml
camera_opengl/: build.gradle
camera_opengl/src/main/: AndroidManifest.xml
camera_opengl/src/main/alone/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
login/: build.gradle
login/src/main/: AndroidManifest.xml
login/src/main/alone/: AndroidManifest.xml
ndk/: build.gradle
ndk/src/main/: AndroidManifest.xml
ndk/src/main/alone/: AndroidManifest.xml
ndk/src/main/cpp/: CMakeLists.txt  c_home.cpp  c_test.cpp
ndk/src/main/cpp/ch/: c_test.h
template/: 说明.txt
template/MVPActivity/: recipe.xml.ftl  template.xml
template/MVVMActivity/: recipe.xml.ftl  template.xml
template/MVVMActivity/root/: AndroidManifest.xml.ftl
(+305 files in other folders)
